[Regression] Don't squash into content underneath a video tag.

This works around a hard to fix bug in pre-BGPT Blink compositing
code that involves mismatches between clips in the property trees
and clips in the graphics layers.

After BGPT launches, this patch can be reverted, and videos
changed to report ShouldClipOverflow() as true on their LayoutBox.

Bug: 900602

Change-Id: I76f5d18f2ecd9a10120d96c4a7898b641b5f557a
Reviewed-on: https://chromium-review.googlesource.com/c/1337289
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608505}
Former-commit-id: 346efa24c5a266c09f90c070777544f46094f715